kong/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dropp-ingress
  namespace: dropp
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 80
          - path: /api/address
            pathType: Prefix
            backend:
              service:
                name: address
                port:
                  number: 80
          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 80
          - path: /api/payment
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 80
